--- a/blog.html
+++ b/blog.html
@@ -31,23 +31,23 @@
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-white display-4"><span class="text-primary">Yawar</span>Ayllu<span class="text-primary"></span></h1>
+                    <h1 class="m-0 text-white display-4"><span class="text-primary">Yawar</span><span class="text-primary"></span>Ayllu</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">INICIO</a>
+                        <a href="index.html" class="nav-item nav-link active">INICIO</a>
                         <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
-                        <a href="service.html" class="nav-item nav-link">COMENTARIOS</a>
+                        <a href="pricing.html" class="nav-item nav-link">EVENTOS</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">ARTICULOS</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item active">GENERAL</a>
+                                <a href="blog.html" class="dropdown-item">GENERAL</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">CONTACTANOS</a>
+                        <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="nav-item nav-link">CONTACTANOS</a>
                     </div>
                 </div>
             </nav>
