--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">INICIO</a>
                         <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
-                        <a href="#" class="nav-item nav-link">COMENTARIOS</a>
+                        <a href="pricing.html" class="nav-item nav-link">EVENTOS</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">GENERAL</a>
                             </div>
                         </div>
-                        <a href="#" class="nav-item nav-link">CONTACTANOS</a>
+                        <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="nav-item nav-link">CONTACTANOS</a>
                     </div>
                 </div>
             </nav>
