--- a/about.html
+++ b/about.html
@@ -348,7 +348,7 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">Alexander Rivera</h5>
+                                <h5 class="font-weight-bold">Xander Rivera</h5>
                                 <span></span>
                             </div>
                         </div>
