--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">Alexander Rivera</h5>
+                                <h5 class="font-weight-bold">Xander Rivera</h5>
                                 <span></span>
                             </div>
                         </div>
@@ -523,7 +523,7 @@
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
                             <h6 class="text-uppercase mt-2 mb-n2">Hasta</h6>
-                            <h1 class="m-0">Oct</h1>
+                            <h1 class="m-0">Nov</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
@@ -542,25 +542,25 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/TALLER_LIDER.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/NOCHE_MITOLOGICA.jpg" alt="">
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
                             <h6 class="text-uppercase mt-2 mb-n2">Oct</h6>
-                            <h1 class="m-0">14</h1>
+                            <h1 class="m-0">27</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
-                                <a class="text-muted ml-2" href="">YAW Y GENLI</a>
+                                <a class="text-muted ml-2" href="">YAW</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
                                 <a class="text-muted ml-2" href="">TALLER</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_linkhttps://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_link">Completa el formulario y únete a nuestro taller junto con Genli - ¿Cómo ser un lider? ¡Yo soy un lider!</a>
+                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSdLoI8xUygKdUquwp9rWYhY7iV08fKjt3jor8tDxVG0VutZGw/viewform?usp=sf_link">Completa el formulario y únete a nuestra noche mitológica</a>
                     </div>
                 </div>
                 
