--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
                         <a href="index.html" class="nav-item nav-link active">INICIO</a>
                         <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
                         <a href="pricing.html" class="nav-item nav-link">EVENTOS</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">GENERAL</a>
-                            </div>
-                        </div>
                         <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="nav-item nav-link">CONTACTANOS</a>
+                        <a href="login.html" class="nav-item nav-link">INGRESA</a>    
                     </div>
                 </div>
             </nav>
