--- a/index.html
+++ b/index.html
@@ -165,25 +165,25 @@
                     <div class="row">
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">6</h2>
-                                <h5 class="font-weight-bold mb-4">Meses de trayectoria</h5>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">1</h2>
+                                <h5 class="font-weight-bold mb-4">Año de trayectoria</h5>
                             </div>
                         </div>
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">5</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">6</h2>
                                 <h5 class="font-weight-bold mb-4">Áreas diferentes</h5>
                             </div>
                         </div>
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">85</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">94</h2>
                                 <h5 class="font-weight-bold mb-4">Voluntarios</h5>
                             </div>
                         </div>
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">1132</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">2597</h2>
                                 <h5 class="font-weight-bold mb-4">Impactados</h5>
                             </div>
                         </div>
