--- a/login.html
+++ b/login.html
@@ -83,10 +83,18 @@
     event.preventDefault();
     var username = this.elements["username"].value;
     var password = this.elements["password"].value;
-    if (username == "marketing" && password == "yaww5"){
+    if (username == "marketing" && password == "Y9FArjzd"){
         window.location.href =  "";
-    } if (username == "recursos humanos" && password == "yaww4"){
+    } if (username == "recursos_humanos" && password == "XHzr8oz6"){
         window.location.href = "";
+    } if (username == "diseno" && password == "k6jYRzRN"){
+       window.location.href = "";
+    } if (username == "proyectos_eventos" && password == "p09qaKlH"){
+       window.location.href = "";
+    } if (username == "investigacion" && password == "AEShxxd8"){
+       window.location.href = "";
+    } if (username == "alianzas" && password == "v5FIuSBs"){
+       window.location.href = "";
     } else{
         alert("Selecciona una opción válida");
     }
