--- a/login.html
+++ b/login.html
@@ -1,106 +1,120 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <link href="img/LOGO REDONDO YAW .png" rel="icon">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login</title>
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: url(img/carousel-1.jpg) no-repeat center center fixed;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+      <!-- Favicon -->
+      <link href="img/LOGO REDONDO YAW .png" rel="icon">
 
-  .login-container {
-    position: relative;
-    max-width: 400px;
-    width: 100%;
-    padding: 40px;
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-    text-align: center;
-  }
+      <!-- Google Web Fonts -->
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+  
+      <!-- Font Awesome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
+  
+      <!-- Libraries Stylesheet -->
+      <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  
+      <!-- Customized Bootstrap Stylesheet -->
+      <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: url(img/carousel-1.jpg) no-repeat center center fixed;
+      background-size: cover;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-  h2 {
-    color: #fff;
-    margin-bottom: 30px;
-  }
+    .login-container {
+      position: relative;
+      max-width: 400px;
+      width: 100%;
+      padding: 40px;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+      text-align: center;
+    }
 
-  input {
-    width: calc(100% - 20px);
-    padding: 10px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.9);
-    outline: none;
-  }
+    h2 {
+      color: #fff;
+      margin-bottom: 30px;
+    }
 
-  input[type="submit"] {
-    background-color: #dc3545;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
+    input {
+      width: calc(100% - 20px);
+      padding: 10px;
+      margin-bottom: 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.9);
+      outline: none;
+    }
 
-  input[type="submit"]:hover {
-    background-color: #dc3545;
-  }
+    input[type="submit"] {
+      background-color: #dc3545;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-  .form-footer {
-    margin-top: 20px;
-    color: #fff;
-  }
+    input[type="submit"]:hover {
+      background-color: #dc3545;
+    }
 
-  .form-footer a {
-    color: #fff;
-    text-decoration: none;
-  }
-</style>
+    .form-footer {
+      margin-top: 20px;
+      color: #fff;
+    }
+
+    .form-footer a {
+      color: #fff;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-<div class="login-container">
-  <h2>Iniciar Sesión</h2>
-  <form id="login-form">
-    <input type="text" name="username" placeholder="Usuario" required><br>
-    <input type="password" name="password" placeholder="Contraseña" required><br>
-    <input type="submit" value="Ingresar">
-  </form>
-  <div class="form-footer">
+  <div class="login-container">
+    <h2>Iniciar Sesión</h2>
+    <form id="login-form">
+      <input type="text" name="username" placeholder="Usuario" required><br>
+      <input type="password" name="password" placeholder="Contraseña" required><br>
+      <input type="submit" value="Ingresar">
+    </form>
+    <div class="form-footer">
+    </div>
   </div>
-</div>
 
-<script>
-  document.getElementById("login-form").addEventListener("submit", function(event){
-    event.preventDefault();
-    var username = this.elements["username"].value;
-    var password = this.elements["password"].value;
-    if (username == "marketing" && password == "Y9FArjzd"){
-        window.location.href =  "";
-    } if (username == "recursos_humanos" && password == "XHzr8oz6"){
+  <script>
+    document.getElementById("login-form").addEventListener("submit", function(event){
+      event.preventDefault();
+      var username = this.elements["username"].value;
+      var password = this.elements["password"].value;
+      if (username == "marketing" && password == "Y9FArjzd"){
+          window.location.href =  "";
+      } if (username == "recursos_humanos" && password == "XHzr8oz6"){
+          window.location.href = "";
+      } if (username == "diseno" && password == "k6jYRzRN"){
         window.location.href = "";
-    } if (username == "diseno" && password == "k6jYRzRN"){
-       window.location.href = "";
-    } if (username == "proyectos_eventos" && password == "p09qaKlH"){
-       window.location.href = "";
-    } if (username == "investigacion" && password == "AEShxxd8"){
-       window.location.href = "";
-    } if (username == "alianzas" && password == "v5FIuSBs"){
-       window.location.href = "";
-    } else{
-        alert("Selecciona una opción válida");
-    }
-    alert("Usuario: " + username + "\nContraseña: " + password);
-  });
-</script>
+      } if (username == "proyectos_eventos" && password == "p09qaKlH"){
+        window.location.href = "";
+      } if (username == "investigacion" && password == "AEShxxd8"){
+        window.location.href = "";
+      } if (username == "alianzas" && password == "v5FIuSBs"){
+        window.location.href = "";
+      } else{
+          alert("Selecciona una opción válida");
+      }
+      alert("Usuario: " + username + "\nContraseña: " + password);
+    });
+  </script>
 
 </body>
 </html>
