--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">INICIO</a>
-                        <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
+                        <a href="volunteering.html" class="nav-item nav-link">VOLUNTARIADO</a>
                         <a href="pricing.html" class="nav-item nav-link">EVENTOS</a>
                         <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="nav-item nav-link">CONTACTANOS</a>
                         <a href="login.html" class="nav-item nav-link">INGRESA</a>    
@@ -421,7 +421,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-5">
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">OPINIONES VOLUNTARIOS</small>
-                    <h1 class="mt-2 mb-3">NUESTROS VOLUNTARIOS DICEN</h1>
+                    <h1 class="mt-2 mb-3">NUESTROS VOLUNTARIOS OPINAN</h1>
                     <h4 class="font-weight-normal text-muted mb-4">Conoce las diversas opiniones de nuestros voluntarios acerca de como se sienten en Yaw y que significa la organización para ellos.</h4>
                 </div>
                 <div class="col-lg-8 mb-5">
