--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
       } if (username == "investigacion" && password == "AEShxxd8"){
         window.location.href = "";
       } if (username == "alianzas" && password == "v5FIuSBs"){
-        window.location.href = "";
+        window.location.href = "alianzas.html";
       } else{
           alert("Selecciona una opción válida");
       } 
