--- a/login.html
+++ b/login.html
@@ -121,17 +121,17 @@
       event.preventDefault();
       var username = this.elements["username"].value;
       var password = this.elements["password"].value;
-      if (username == "marketing" && password == "Y9FArjzd"){
+      if (username == "marketing" && password == "140423"){
           window.location.href =  "";
-      } if (username == "recursos_humanos" && password == "XHzr8oz6"){
+      } if (username == "recursos_humanos" && password == "140423"){
           window.location.href = "";
-      } if (username == "diseno" && password == "k6jYRzRN"){
+      } if (username == "diseno" && password == "140423"){
         window.location.href = "";
-      } if (username == "proyectos_eventos" && password == "p09qaKlH"){
+      } if (username == "proyectos_eventos" && password == "140423"){
         window.location.href = "";
-      } if (username == "investigacion" && password == "AEShxxd8"){
+      } if (username == "investigacion" && password == "140423"){
         window.location.href = "";
-      } if (username == "alianzas" && password == "v5FIuSBs"){
+      } if (username == "alianzas" && password == "140423"){
         window.location.href = "alianzas.html";
       } else{
           alert("Selecciona una opción válida");
