--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
                             <h6 class="text-uppercase mt-2 mb-n2">Hasta</h6>
-                            <h1 class="m-0">Nov</h1>
+                            <h1 class="m-0">MAY</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
@@ -532,12 +532,12 @@
                                 <a class="text-muted ml-2" href="">CONVOCATORIA</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link">Completa el formulario y únete a nosotros haciendo click aquí</a>
+                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSeD-FvVgedmNqHeT4FbuZXH5euptBqDJcmz37V24u_I7n8MtA/viewform?usp=sf_link">Completa el formulario y únete a nosotros haciendo click aquí</a>
                     </div>
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/NOCHE_MITOLOGICA.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/LOGO CUADRADO YAW.png" alt="">
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
                             <h6 class="text-uppercase mt-2 mb-n2">Oct</h6>
@@ -552,10 +552,10 @@
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
-                                <a class="text-muted ml-2" href="">TALLER</a>
+                                <a class="text-muted ml-2" href="">PROXIMAMENTE</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSdLoI8xUygKdUquwp9rWYhY7iV08fKjt3jor8tDxVG0VutZGw/viewform?usp=sf_link">Completa el formulario y únete a nuestra noche mitológica</a>
+                        <a class="h5 font-weight-bold" href="">PROXIMAMENTE MÁS</a>
                     </div>
                 </div>
                 
@@ -575,11 +575,8 @@
                 <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
+                <h5 class="font-weight-bold text-primary mb-4"></h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdLoI8xUygKdUquwp9rWYhY7iV08fKjt3jor8tDxVG0VutZGw/viewform"><i class="fa fa-angle-right text-primary mr-2"></i> NOCHE MITOLÓGICA </a>
-
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
