--- a/pricing.html
+++ b/pricing.html
@@ -39,15 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">INICIO</a>
-                        <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
+                        <a href="volunteering.html" class="nav-item nav-link">VOLUNTARIADO</a>
                         <a href="pricing.html" class="nav-item nav-link">EVENTOS</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">GENERAL</a>
-                            </div>
-                        </div>
                         <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="nav-item nav-link">CONTACTANOS</a>
+                        <a href="login.html" class="nav-item nav-link">INGRESA</a>    
                     </div>
                 </div>
             </nav>
@@ -176,11 +171,8 @@
                 <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
+                <h5 class="font-weight-bold text-primary mb-4"></h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdLoI8xUygKdUquwp9rWYhY7iV08fKjt3jor8tDxVG0VutZGw/viewform"><i class="fa fa-angle-right text-primary mr-2"></i> NOCHE MITOLÓGICA </a>
-
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -209,7 +201,6 @@
         </p>
     </div>
     <!-- Footer End -->
-
 
 
     <!-- Back to Top -->
