--- a/volunteering.html
+++ b/volunteering.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DotCom - Creative Agency Website Template</title>
+    <title>YAW - VOLUNTARIADO</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="YAWAR AYLLU" name="keywords">
+    <meta content="YAWAR AYLLU" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/LOGO REDONDO YAW .png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -70,9 +70,9 @@
                 <div class="col-12 col-lg-6 text-center mb-5">
                     <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Nuestro Voluntariado</small>
                     <h1 class="mt-2 mb-3">Conoce nuestros hitos</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd dolores elitr sed est duo ea ipsum justo diam, est erat lorem. Est magna sea clita diam tempor elitr</h4>
-                    <h5 class="font-weight-bold mb-4">Need A Custom Package?</h5>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Contact Now</a>
+                    <h4 class="font-weight-normal text-muted mb-4">Los hitos alcanzados por nuestros voluntarios no solo nos permiten cuantificar su valiosa contribución, sino también brindarles el reconocimiento que merecen.</h4>
+                    <h5 class="font-weight-bold mb-4">¿Quieres ser parte del equipo?</h5>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeD-FvVgedmNqHeT4FbuZXH5euptBqDJcmz37V24u_I7n8MtA/viewform?usp=sf_link" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Postula ya</a>
                 </div>
             </div>
             <div class="row">
@@ -164,11 +164,8 @@
                 <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
+                <h5 class="font-weight-bold text-primary mb-4"></h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
-                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdLoI8xUygKdUquwp9rWYhY7iV08fKjt3jor8tDxVG0VutZGw/viewform"><i class="fa fa-angle-right text-primary mr-2"></i> NOCHE MITOLÓGICA </a>
-
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
