--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
       } if (username == "diseno" && password == "140423"){
         window.location.href = "";
       } if (username == "proyectos_eventos" && password == "140423"){
-        window.location.href = "";
+        window.location.href = "proyectosye.html";
       } if (username == "investigacion" && password == "140423"){
         window.location.href = "";
       } if (username == "alianzas" && password == "140423"){
